[package]
name = "ldtk_bevy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.12", features = ["dynamic_linking"]}
bevy_rapier2d = { version = "0.23.0", features = [ "simd-stable", "debug-render-2d", "parallel" ] }
bevy_ecs_ldtk = "0.9.0"
bevy_asset_loader = "0.19.1"